protocol-netty: low-copy request decode